# teknic_motor_controller

./: CMakeLists.txt  README.md  package.xml
config/: motor_parameters.yaml  vehicle_parameters.yaml
docs/: S-FoundationRef.chm
launch/: teleop_twist_keyboard.launch  trash_bot_motor_controller.launch
src/LibLinuxOS/src/: version.cpp
src/SDK_Examples/Example-GPIO/: Example-GPIO.cpp
src/SDK_Examples/Example-Motion/: Example-Motion.cpp
src/SDK_Examples/Example-MultiThreaded/: Axis.h  Example-MultiThreaded.cpp
src/trash_bot_motor_controller/: .#differential_drive.h  README.md  differential_drive.cpp  differential_drive.h  trash_bot_motor_controller.cpp  wally_motor_control.py
